src/pages/CopyDoc.css
/* body {
  background: #20262e;
  font-family: Helvetica;
}

#app {
  background: #fff;
  border-radius: 4px;
  padding: 20px;
  transition: all 0.2s;
} */

.key-input {
  background-color: #aaa;
  color: #eee;
  border: 1px solid black;
  border-radius: 2px;
  box-shadow: none;
  padding: 4px;
  padding-left: 10px;
  margin: 5px;
  /* width: 1200px; */
  width: calc(100% - 6px);
}
.key-input:focus {
  background-color: #eee;
  color: black;
}

.line-container,
.val-input {
  font-size: 24px;
  font-family: "Cousine", monospace;
}

.val-input {
  overflow-x: hidden;
}

.line-container {
  color: black;
  margin: 5px;
  margin-bottom: 0px;

  white-space: nowrap;
  max-width: 100%;
  overflow-x: scroll;
}

.item-container {
  display: inline-flex;
  flex-direction: column;

  width: 1200px;
  max-width: calc(100vw - 40px);
}

.CopyItem {
  display: inline-flex;
  align-items: center;

  margin-top: 20px;
  box-shadow: 0 0 2px 2px #eee;

  width: 100%;
}

.CopyDoc {
  width: 100%;
  display: flex;
  justify-content: center;
}

.command-container {
  flex-grow: 1;
  flex-basis: 0;
  max-width: calc(100% - 100px);
}

.line-container {
  width: auto;
}

.remove-button {
  align-self: flex-start;
  margin: 5px;
  margin-left: -5px;

  color: #aeaeae;

  background: white;
  border: 1px solid white;
  border-radius: 30px;
  cursor: pointer;
  font-size: 31px;

  display: inline-block;
  line-height: 0px;
  padding: 12px 2px 10px 1.5px;
}
.remove-button:before {
  content: "×";
}
.remove-button:hover {
  box-shadow: inset 0px 0px 5px -3px #000000;
}
.remove-button:focus {
  outline: 0;
}

.copy-button {
  margin: 10px;
  margin-right: 5px;
  width: 64px;
  height: 64px;
  display: inline-block;

  font-size: 80px;
  /*  background-color: #b391fa; */
}
.copy-symbol {
  display: block;
  margin-top: -21px;
}

.add-button {
  margin: 10px;
  margin-top: 20px;
  font-size: 42px;

  width: 64px;
  height: 64px;

  display: inline-block;
  font-family: sans-serif;
}

.val-input {
  min-width: 2ch;
  padding-left: 5px;
  padding-right: 5px;
  margin-left: 5px;
  margin-right: 5px;
  height: 28px;

  font-style: italic;

  resize: none;
  display: inline-block;
  vertical-align: text-bottom;
}
.val-const {
  position: relative;
  top: -3px;
}

.copy-helper {
  color: black;
  display: inline-block;
}

